set min-height on chat-list li to prevent prof pic squishing

--- a/apps/chat_web/web/static/css/app.css
+++ b/apps/chat_web/web/static/css/app.css
@@ -161,6 +161,7 @@ section.chat-pane {
   box-sizing: border-box;
   padding: 7px 15px;
   position: relative;
+  min-height: 40px;
 }
 #chat-list li:nth-child(odd) {
   /*background-color: #ddd;
